# filewatch

./: Makefile  Makefile.in  README.md  actions.c  actions.h  backup.c  backup.h  common.c  common.h  config.status  config_file.c  config_file.h  configure  configure.ac  event.c  event.h  files_db.c  files_db.h  filewatch  filewatch.conf.example  main.c  process.c  process.h  servant.c  servant.h  stats.c  stats.h  users.c  users.h
libUseful/: Makefile  Vars.c  config.status
libUseful-4/: Makefile
